--- a/popup.html
+++ b/popup.html
@@ -1,40 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Content Blocker</title>
-    <link rel="stylesheet" href="popup.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <style>
-        .material-symbols-outlined {
-          font-variation-settings:
-          'FILL' 0,
-          'wght' 400,
-          'GRAD' 0,
-          'opsz' 48
-        }
-        </style>
-  </head>
-  <body>
-    <h1>Content Blocker</h1>
-    <h2>Blocked strings:</h2>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Content Blocker</title>
+		<link rel="stylesheet" href="popup.css" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+		/>
+		<style>
+			.material-symbols-outlined {
+				font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+			}
+			/* MAYBE PUT THIS IN popup.css */
+		</style>
+	</head>
 
-    <div class="list-container">
-        <ol class="list">
-            <li class="list-item">
-                <div class="li-content-container">
-                    <input type="text" class="li-input" autofocus>
-                    <button class="plus-bttn">
-                        <span class="material-symbols-outlined" style="font-size:24px;vertical-align: middle;">add</span>
-                    </button>
-                </div>
-            </li>
-        </ol>
-        <button class="submit-button">Submit</button>
-    </div>
+	<body>
+		<h1>Content Blocker</h1>
 
-    <script src="popup.js"></script>
-  </body>
+		<li class="list-item">
+			<div class="li-content-container">
+				<input type="text" class="li-input" />
+				<button class="plus-bttn">
+					<!-- add-button -->
+					<span
+						class="material-symbols-outlined"
+						style="font-size: 24px; vertical-align: middle"
+						>add</span
+					>
+				</button>
+			</div>
+		</li>
+
+		<div class="list-container">
+			<ol class="list"></ol>
+		</div>
+
+		<template>
+			<li class="new-list-item">
+				<!-- blocked-item/censored-item -->
+				<input
+					type="checkbox"
+					id="collapsible-num"
+					class="collapsible toggle"
+				/><label for="collapsible-num" class="collapsible-label"
+					><label class="switch"
+						><input type="checkbox" class="switch-input" checked="" /><span
+							class="slider round"
+						></span></label
+					><span class="collapsible-label-span"></span
+					><span class="caret material-symbols-outlined">expand_more</span>
+					<div class="vertical-separator"></div>
+					<span class="trash-button-span material-symbols-outlined"
+						>delete</span
+					>
+
+					<!-- <label
+						for="delete-checkbox-num"
+						class="delete-checkbox-label material-symbols-outlined"
+					>
+						delete
+						<input
+							type="checkbox"
+							id="delete-checkbox-num"
+							class="delete-checkbox"
+						/>
+					</label> -->
+				</label>
+				<div class="options-grid-container">
+					<!-- censor-options-container/options-container -->
+					<div class="options-grid-content">
+						<!-- censor-options-content/options-content -->
+						<input
+							type="radio"
+							id="block-num"
+							class="block radio-input"
+							name="options-num"
+							value="block"
+							checked=""
+						/>
+						<!-- id="radio-input-block-num/radio-block-num" -->
+						<!-- radio-input-block/radio-block -->
+						<label for="block-num" class="block-radio-label radio-label"
+							>Block</label
+						><input
+							type="radio"
+							id="redirect-num"
+							class="redirect radio-input"
+							name="options-num"
+							value="redirect"
+						/><label for="redirect-num" class="redirect-radio-label radio-label"
+							>Redirect</label
+						>
+						<div class="redirect-div">
+							<div class="rdc1 redirect-div-content">
+								<input
+									type="url"
+									class="redirect-url"
+									placeholder="https://example.com"
+								/><button class="url-button">Enter</button>
+							</div>
+							<div class="rdc2 display-none">
+								<p class="pURL"></p>
+								<button class="edit-button">Edit</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</li>
+		</template>
+
+		<script src="popup.js"></script>
+	</body>
 </html>
