--- a/popup.html
+++ b/popup.html
@@ -113,6 +113,6 @@
 			</li>
 		</template>
 
-		<script src="popup.js"></script>
+		<script type="module" src="popup.js"></script>
 	</body>
 </html>
